compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
data <!ILLEGAL_ANNOTATION_KEYWORD_ON_ENUM!>annotation<!> enum class E {
    D
}